<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/selector_list_item"
    android:gravity="center_vertical"
    android:paddingBottom="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="5dp">

    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/sysicon"
        android:scaleType="centerInside"
        android:src="@drawable/music" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tvSong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="@string/song"
            android:textColor="@color/wx_text_black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvSinger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:text="@string/singer"
            android:textColor="@color/wx_text_gray"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration"
        android:textColor="@color/wx_text_watermarker"
        android:textSize="12sp" />

</LinearLayout>