<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#f1f1f1"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvPlaylist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="3dp"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/playlist" />

        <TextView
            android:id="@+id/tvSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tvPlaylist"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/playlistsize" />

        <TextView
            android:id="@+id/tvClear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/clear" />

    </RelativeLayout>

    <LinearLayout style="@style/ViewAsDivider"></LinearLayout>

    <ListView
        android:id="@+id/lvList"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:cacheColorHint="#00000000"
        android:divider="@+color/wx_divider"
        android:dividerHeight="1dp"
        android:listSelector="#00000000">

    </ListView>

    <LinearLayout style="@style/ViewAsDivider" />

    <TextView
        android:id="@+id/tvClose"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/close"
        android:textColor="@color/wx_text_black" />

</LinearLayout>