<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="50dp"
    android:gravity="center_vertical"
    android:paddingBottom="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="5dp">

    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginRight="3dp"
        android:contentDescription="@string/sysicon"
        android:scaleType="centerInside"
        android:src="@drawable/list_item_music_playing"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tvSong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/song"
            android:textColor="@color/wx_text_black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvSinger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/singer"
            android:textColor="@color/wx_text_gray"
            android:textSize="14sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ivDelete"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/sysicon"
        android:scaleType="centerInside"
        android:src="@drawable/ic_action_cancel" />

</LinearLayout>