<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/playbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#f1f1f1"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minWidth="35dp"
            android:singleLine="true"
            android:text="@string/timezero" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:focusable="true"
            android:maxHeight="30dp"
            android:minHeight="30dp"
            android:progress="0"
            android:thumb="@drawable/seekbar_thumb" />

        <TextView
            android:id="@+id/tvEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minWidth="35dp"
            android:singleLine="true"
            android:text="@string/timezero" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:contentDescription="@string/sysicon"
            android:src="@drawable/ic_launcher" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:text="@string/song"
                android:textColor="@color/wx_text_black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvSinger"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:text="@string/singer"
                android:textColor="@color/wx_text_gray"
                android:textSize="14sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ivPlay"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:contentDescription="@string/sysicon"
            android:scaleType="centerInside"
            android:src="@drawable/selector_playbar_play" />

        <ImageView
            android:id="@+id/ivNext"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/sysicon"
            android:scaleType="centerInside"
            android:layout_marginRight="10dp"
            android:src="@drawable/selector_playbar_next" />

        <ImageView
            android:id="@+id/ivList"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/sysicon"
            android:scaleType="centerInside"
            android:src="@drawable/selector_playbar_list" />

    </LinearLayout>

</LinearLayout>